fix overflow of element.
we don't need that, we use inline-block styling for dynamically resizing the boxes

--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body {
 .info {
   margin-left: 10px;
   font-size: 1.2em;
-  overflow-y: scroll;
   scrollbar-color: #4d4d4d transparent;
   scrollbar-width: thin;
 }
